# aos-meta-symbolic-kernel

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SCOPE_OF_PROOF.md  SECURITY.md  docs.json  lakefile.lean  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
benchmarks/: __init__.py  controlled_study_manifest.example.json  e3_study_manifest.example.json  freeze_public_outputs.py  freeze_ragtruth_outputs.py  generate_llm_assurance_hard_cases.py  llm_assurance_hard_cases.json  llm_assurance_scenarios.json  run_benchmarks.py  run_controlled_study.py  run_e3_controlled_study.py  run_latency_benchmark.py  run_llm_assurance_benchmark.py  run_llm_hard_case_benchmark.py  run_operational_control_replay.py  run_ragtruth_public_benchmark.py  scenarios.json
core/: __init__.py  aos_public_core.py
docs/: ABSTRACTION_MAP.md  AI_PROBLEMS_ADDRESSED.md  APPLICATION_PROFILES.md  CALIBRATION_AND_OPTIMIZATION.md  CLEAN_ROOM_TEST.md  COMMERCIALIZATION.md  CONTROLLED_STUDY_DATASETS.md  CONTROL_SPEC.md  CUSTOMER_VALUE.md  DATASET_PROVENANCE.md  DEMONSTRATOR_COMPARISON.md  DEVELOPMENT_TRANSPARENCY.md  ENGINEERING_PROOF.md  EVIDENCE_STATUS.md  EXTERNAL_EVALUATION.md  FLAGSHIP_CASE_STUDY.md  FORMAL_CLAIMS_BOUNDARY.md  INFORMATION_ARCHITECTURE.md  INTEGRITY_ANCHORS.md  IP_PROTECTION.md  LLM_ASSURANCE_EVALUATION.md  OFFLINE_EVALUATION_RESULTS.md  OPERATIONAL_CONTROL_REPLAY.md  PLAIN_LANGUAGE_OVERVIEW.md  POTENTIAL_BENEFITS.md  PUBLICATION_CHECKLIST.md  PUBLIC_ASSESSMENT.md  PUBLIC_BOUNDARY.md  PUBLIC_SURFACES.md  RADIOLOGY_EVIDENCE_REVIEW.md  (+10 more)
(+48 files in other folders)
